# halloween-enigma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: commands.cpp  commands.h  main.cpp
src/cfg/: config.cpp  config.h
src/modules/: external_functions.cpp  external_functions.h
src/puzzle/: puzzle.cpp  puzzle.h
src/puzzle/part_1/: blackbird.cpp  dead_eye.cpp  forgotten.cpp  gravestone.cpp  hallucinations.cpp  logon.cpp  nothing_is_what_it_seems.cpp  she_is_here.cpp  start.cpp  suspicion.cpp
src/puzzle/part_2/: i_found_her_question_mark.cpp  lies.cpp  mosaic_prevalence.cpp  no_sense_of_self.cpp  red_snow.cpp  six_feet.cpp  someone_is_waiting.cpp  stalker.cpp  there_is_nothing_for_me_to_want.cpp  you_do_not_make_sense.cpp
src/puzzle/part_2/temp/: stalker.cpp  stalker_maze.cpp  stalker_maze.h
src/puzzle/part_3/: do_not_let_him_escape.cpp  nicole_dies.cpp  one_last_puzzle.cpp  what_are_you.cpp  where_is_she.cpp  who_is_she.cpp  why_would_you_do_this.cpp  you_have_got_to_stop.cpp
src/puzzle/part_4/: climax.cpp  climax.h  final_confrontation_pt_1.cpp  final_confrontation_pt_2.cpp  final_confrontation_pt_3.cpp  final_confrontation_pt_4.cpp  final_confrontation_pt_5.cpp  final_confrontation_pt_6.cpp
src/puzzle/part_5/: nicole_is_saved.cpp
src/taunt/: taunt.cpp  taunt.h
src/taunt/initial/: nicole_is_kidnapped.cpp  play_my_game.cpp
src/taunt/subsequent/: almost_there.cpp  death_threat.cpp  give_her_up.cpp  halfway_through.cpp  more_pain.cpp  nicole_begs.cpp  nicole_fake_message_1.cpp  nicole_fake_message_2.cpp  nicole_fake_message_3.cpp  nicole_fake_message_4.cpp  nicole_in_pain.cpp  nicole_is_dead.cpp  nicole_is_not_going_anywhere.cpp  nicole_pleading.cpp  nicole_real_relay.cpp  nicole_screaming.cpp  nicole_threat.cpp  one_last_warning.cpp  playing_with_her_life.cpp  power_drill_on_bestie.cpp  power_drill_threat.cpp  she_is_dead_or_is_she.cpp  she_needs_help.cpp  shodan_hack_1.cpp  shodan_hack_2.cpp  shodan_hack_3.cpp  suspicious_acts.cpp  time_is_running_out.cpp  what_are_you_all_doing.cpp  what_are_you_waiting_for.cpp
